<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/dim_10dp"
    android:id="@+id/main"
    android:padding="@dimen/dim_16dp"
    tools:context=".ui.MainActivity">
    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount_rs_0"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:padding="@dimen/dim_8dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_payments"
            android:gravity="center"
            android:textSize="@dimen/sp_18"
            android:paddingVertical="@dimen/dim_8dp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_payment"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            style="?attr/materialButtonOutlinedStyle"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/chipContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dim_5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dim_16dp"/>
</LinearLayout>




